<resources>
    <string name="app_name">Remitto</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="transfer">Transfer</string>
    <string name="user_name">Carol Pierce</string>
    <string name="your_info">Your Info</string>
    <string name="recipients">Receipts</string>
    <string name="notifications">Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="send">Send</string>
    <string name="sent">Sent</string>
    <string name="request">Request</string>
    <string name="how_it_works">How it works</string>
    <string name="select_amount">1. Select Amount</string>
    <string name="select_who">2. Select Who</string>
    <string name="tap_confirm">3. Tap “Confirm”</string>
    <string name="that_simple">Yup, that simple!</string>
    <string name="menu_delete">Delete</string>
    <string name="you">You</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="pending">Pending</string>
    <string name="amount">Amount</string>
    <string name="reason">Reason:</string>
    <string name="to">To:</string>
    <string name="add_reason">Add Reason…</string>
    <string name="add_recipient">Add Recepient...</string>
    <string name="menu_foward">Forward</string>
    <string name="currency_amount">$ %1$s</string>
    <string name="confirm">CONFIRM</string>
    <string name="reason_value">Reason: %1$s</string>
    <string name="test_string">X&lt;sup&gt;3&lt;/sup&gt;</string>
    <string name="menu_submit">Submit</string>
    <string name="avatar">Avatar</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="emails">Emails</string>
    <string name="phones">Phones</string>
    <string name="account_number">IBAN: IT40S0542811101000000123456 \nBIC: PSPBFIHH</string>
    <string name="add_new">ADD NEW</string>


    <string name="sample_email">carol.pierce@gmail.com</string>
    <string name="sample_email_2">carol.pierce@yolo.com</string>
    <string name="sample_phone">1 (345) 215-1037</string>
    <string name="iban">IBAN</string>
    <string name="bic">BIC</string>
    <string name="add_iban">Add IBAN</string>
    <string name="add_bic">Add BIC</string>


</resources>
