<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/bg_profile_header"
            android:orientation="vertical">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/bg_profile_header"
                android:scaleType="centerInside"
                android:layout_marginTop="20dp"
                android:layout_gravity="center|center_vertical"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="@color/munsell"
            android:textColor="@color/davygrey"
            android:text="@string/your_info"
            android:paddingLeft="10dp"
            android:textSize="18sp"/>

        <ListView
            android:id="@+id/list_banks"
            android:layout_margin="10dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ListView
            android:id="@+id/list_emails"
            android:layout_margin="10dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ListView
            android:id="@+id/list_phone"
            android:layout_margin="10dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="@color/munsell"
            android:textColor="@color/davygrey"
            android:text="@string/recipients"
            android:paddingLeft="10dp"
            android:textSize="18sp"/>

        <ListView
            android:id="@+id/list_email_recipient"
            android:layout_margin="10dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="@color/munsell"
            android:textColor="@color/davygrey"
            android:text="@string/notifications"
            android:paddingLeft="10dp"
            android:textSize="18sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"
            android:paddingLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/davygrey"
                android:text="@string/push_notifications"
                android:paddingLeft="10dp"
                android:textSize="16sp"/>

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end|right"
                android:checked="true"
                android:theme="@style/AppTheme.Switch"
                />

        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

