<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/munsell"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <include layout="@layout/partial_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sent"
                android:layout_marginLeft="10dp"
                android:textColor="@color/davygrey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/white"
            android:weightSum="3"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/user"
                    android:scaleType="centerInside"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center|center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you"
                    android:textColor="@color/davygrey"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            </LinearLayout>

            <ImageView
                android:layout_weight="0.4"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:rotation="180"
                android:tint="@color/davygrey"
                android:scaleType="centerInside"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_weight="1.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/friend_8"
                    android:scaleType="centerInside"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center|center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="@color/davygrey"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:layout_marginLeft="10dp"
                android:textColor="@color/davygrey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_gravity="center"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_margin="10dp"
                android:textColor="@color/davygrey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jan. 22, 2015"
                android:layout_margin="10dp"
                android:textColor="@color/davygrey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/davygrey"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_margin="10dp"
                android:textColor="@color/davygrey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                android:layout_margin="10dp"
                android:textColor="@color/davygrey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/davygrey"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:layout_margin="10dp"
                android:textColor="@color/davygrey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="€23.50"
                android:layout_margin="10dp"
                android:textColor="@color/davygrey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/davygrey"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason"
                android:layout_margin="10dp"
                android:textColor="@color/davygrey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dinner"
                android:layout_margin="10dp"
                android:textColor="@color/davygrey"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
